# AWSEDIT

./: AUTHORS  FAQ  INSTALL  Makefile.am  Makefile.in  README.md  awsedit.glade  awsedit.gladep  config.h  config.h.in  config.status  configure  configure.in
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
po/: Makefile.in
src/: .$  .directory  Makefile.am  Makefile.in  awsedit  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c
src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
